cilium/block-shipping-L7.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "block-traffic-outside-ahold-services"
  namespace: "sock-shop"
spec:
  description: "L7 policy to restrict access to specific HTTP call"
  endpointSelector:
    matchLabels:
      name: shipping
  ingress:
  - fromEndpoints:
    - matchLabels:
        run: ahold
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/"
